--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -1,5 +1,6 @@
 header{
     background-color: blanchedalmond;
+    text-align: center;
 }
 
 
@@ -7,7 +8,6 @@ header{
 #nav{
     margin: 0;
     width: 100vw;
-    height: 20%;
     text-align: center;
 }
 .navbar{
@@ -15,6 +15,14 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+
+
+
+.img{
+    width: 300px;
+    height: 300px;
 }
 footer{
     left: 0;
