--- a/css/style-Author.css
+++ b/css/style-Author.css
@@ -1,6 +1,7 @@
 header{
     background-color: blanchedalmond;
     text-align: center;
+    border: black solid 3px;
 }
 #nav{
     margin: 0;
@@ -19,7 +20,16 @@ header{
     grid-auto-rows: minmax(100px,auto);
     gap: 3px;
     width: 100%;
-    height: 100vh;
+}
+/* Author pics*/
+.Author{
+    width: 400px;
+    height: auto;
+    position: relative;
+    justify-items: center;
+}
+h2{
+    text-align: center;
 }
 #Sci-fi{
     background-color: #720d0de3 ;
