--- a/css/style-art.css
+++ b/css/style-art.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@900&family=Oldenburg&display=swap');
+
 header{
     background-color: blanchedalmond;
     text-align: center;
+    border: black solid 3px;
 }
 #nav{
     margin: 0;
@@ -8,15 +11,28 @@ header{
     text-align: center;
     font-size: 20px;
 }
+h1{
+    font-family: 'Biryani', sans-serif;
+}
 .navbar{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-
-
-
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: black solid 8px;
+}
+h2{
+    text-align: center;
+    font-family: 'Oldenburg', cursive;
+}
+body{
+    background-color: grey;
+}
 
 
 
