--- a/css/style-about.css
+++ b/css/style-about.css
@@ -17,9 +17,6 @@ header{
 }
 
 .container {
-    display: grid; 
-    grid-template-columns: 1.1fr 0.9fr; 
-    grid-auto-rows: minmax(100px,auto);
     gap: 0;
     width: 100%;
     text-align: left;
@@ -29,16 +26,6 @@ header{
 h2{
     text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
 footer{
     left: 0;
     bottom: 0;
@@ -47,4 +34,17 @@ footer{
     color: black;
     text-align: center;
     font-size: small;
+}
+
+
+@media screen and ( min-width : 800px ) {
+    .container {
+        display: grid; 
+        grid-template-columns: 1.1fr 0.9fr; 
+        grid-auto-rows: minmax(100px,auto);
+        gap: 0;
+        width: 100%;
+        margin: 0%;
+        padding: 0%;
+    }
 }
