--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -21,9 +21,13 @@ header{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+    width: 500px;
     height: 300px;
 }
+main{
+    text-align: center;
+}
+
 footer{
     left: 0;
     bottom: 0;
