--- a/css/style-Author.css
+++ b/css/style-Author.css
@@ -180,7 +180,7 @@ footer{
         grid-column: 2/3;
         grid-row: 7/8;    
     }
-    #GrimDark{t;
+    #GrimDark{
         grid-column: 1/3;
         grid-row: 8/9;
         height: auto;
