--- a/css/style-Author.css
+++ b/css/style-Author.css
@@ -7,6 +7,7 @@ header{
     border: black solid 3px;
 }
 #nav{
+    background-color: antiquewhite;
     margin: 0;
     width: 100vw;
     text-align: center;
