--- a/css/style-art.css
+++ b/css/style-art.css
@@ -6,6 +6,7 @@ header{
     border: black solid 3px;
 }
 #nav{
+    background-color: antiquewhite;
     margin: 0;
     width: 100vw;
     text-align: center;
