--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
 body{
     background-color: white;
 }
@@ -13,17 +14,18 @@ header{
     left: 0;
     top: 0;
     width: 100%;
-    background-color: rgb(231, 245, 182);
     color: black;
     text-align: center;
     font-size: small;
-    border: black solid 3px;
+    border: black solid 5px;
+
 }
 h1{
-    font-family: 'Cormorant Infant', serif;
+    font-family: 'Libre Baskerville', serif;
     font-size: 40px;
 }
 #nav{
+    background-color: antiquewhite;
     margin: 0;
     width: 100vw;
     text-align: center;
@@ -36,9 +38,12 @@ h1{
     justify-content: space-around;
 }
 .item.item1 {
-    background-color: rgb(105, 105, 138) ;
     grid-row: 1/3;
     height: auto;
+}
+#list{
+    background-color: antiquewhite;
+    font-size: larger;
 }
 /* Bookshelf image */
 .item.item2 {
@@ -67,15 +72,18 @@ h1{
     height: 100%;
     position: relative;
 }
-h3{
-    position:absolute;
-    bottom:230px;
+h2{
     right: 50%;
+    bottom: 25%;
+    position:absolute;
 }
 ul{
     position:absolute;
     bottom:10%;
     right: 50%;
+}
+ul:hover{
+    color: red;
 }
 footer{
     /*position: fixed;*/
